# jianying

./: .gitignore  README.md
.github/workflows/: ci.yml
photopicker/: .env.example  .gitignore  .photopicker_install.json  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  start_mac.command  start_windows.bat
photopicker/backend/: aesthetic.py  app.py  cache.py  detector.py  exporter.py  grouper.py  logger.py  models.py  preferences.py  runtime.py  scanner.py  state.py  vision.py  watermark.py
photopicker/docs/: scheme-comparison.html
photopicker/frontend/: index.html  package-lock.json  package.json  vite.config.js
photopicker/frontend/src/: App.vue  router.js
photopicker/frontend/src/components/: GradeSelector.vue  PKBattle.vue  ProgressSteps.vue  RejectedPool.vue  ZoomViewer.vue
photopicker/frontend/src/views/: ConfirmView.vue  ExportView.vue  FaceGroupsView.vue  FilterView.vue  ImportView.vue  PendingView.vue  PickView.vue  PrescreenView.vue
photopicker/scripts/: launcher.py
photopicker/tests/: test_aesthetic.py  test_cache.py  test_detector.py  test_exporter.py  test_grouper.py  test_models.py  test_runtime.py  test_scanner.py  test_state.py  test_vision.py  test_watermark.py
